fixed extra white space

--- a/index.css
+++ b/index.css
@@ -196,6 +196,9 @@ h2 {
   min-height: 100%;
   border-top:60px solid white; 
   display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 #about {
@@ -214,6 +217,7 @@ h2 {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  align-items: center;
   width: 90%;
   margin-left: auto;
   margin-right:auto;
@@ -261,6 +265,7 @@ h2 {
     width: 90%;
     margin-left:auto;
     margin-right:auto;
+    align-items: center;
   }
 
   #resume img {
@@ -565,10 +570,6 @@ input[id=last] {
   font-size: 15pt;
 }
 
-
-#about-info {
-
-}
 @media screen and (max-width: 1120px) {
   #flexy {
     flex-flow: column;
@@ -577,6 +578,7 @@ input[id=last] {
     display: flex;
     flex-flow: column;
     justify-content: center;
+    align-self: center;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
